# cryptoflow

./: LICENSE  README.md
backend/: .env  .gitignore  Cargo.toml  build.sh
backend/migrations/: 20231230194839_users_table.up.sql  20240101210638_qanda.down.sql  20240101210638_qanda.up.sql
backend/settings/: base.yml  development.yml  production.yml
backend/src/: lib.rs  main.rs  settings.rs  startup.rs
backend/src/models/: mod.rs  qa.rs  users.rs
backend/src/routes/: health.rs  mod.rs
backend/src/routes/crypto/: coins.rs  mod.rs  price.rs  prices.rs
backend/src/routes/qa/: answer.rs  answers.rs  ask.rs  mod.rs  questions.rs
backend/src/routes/users/: activate_account.rs  current_user.rs  login.rs  logout.rs  mod.rs  register.rs
backend/src/store/: answer.rs  crypto.rs  general.rs  mod.rs  question.rs  tag.rs  users.rs
backend/src/utils/: crypto.rs  email.rs  errors.rs  middleware.rs  mod.rs  password.rs  qa.rs  query_constants.rs  responses.rs  user.rs
backend/templates/: user_welcome.html
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css  app.d.ts  app.html  declarations.d.ts  hooks.server.js
frontend/src/lib/components/: Charts.svelte  Loader.svelte  Modal.svelte  Notification.svelte  ShowError.svelte
frontend/src/lib/components/footer/: Footer.svelte
frontend/src/lib/components/header/: Header.svelte
frontend/src/lib/components/inputs/: Email.svelte  Password.svelte  TagCoin.svelte  Text.svelte  TextArea.svelte
frontend/src/lib/stores/: notification.store.js  tags.stores.js
frontend/src/lib/utils/: constants.js  helpers.js  select.custom.js
frontend/src/routes/: +layout.js  +layout.server.js  +layout.svelte  +page.server.js  +page.svelte
frontend/src/routes/api/[question_id]/answers/: +server.js
frontend/src/routes/api/crypto/prices/: +server.js
frontend/src/routes/questions/[id]/: +page.server.js  +page.svelte
frontend/src/routes/questions/[id]/delete/: +page.server.js  +page.svelte
frontend/src/routes/questions/[id]/update/: +page.server.js  +page.svelte
frontend/src/routes/questions/ask/: +page.server.js  +page.svelte
frontend/src/routes/users/activate/[id]/: +page.server.js  +page.svelte
frontend/src/routes/users/login/: +page.server.js  +page.svelte
frontend/src/routes/users/signup/: +page.server.js  +page.svelte
frontend/static/: browserconfig.xml
