[package]
name = "backend"
version = "0.1.0"
authors = ["John Idogun <sirneij@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
argon2 = "0.5"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie-private", "cookie"] }
bb8-redis = "0.14"
cargo-watch = "8.5"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.13", features = ["yaml"] }
dotenv = "0.15"
futures = "0.3"
itertools = "0.12"
lettre = { version = "0.11", features = ["builder", "tokio1-native-tls"] }
minijinja = { version = "1.0", features = ["loader"] }
pulldown-cmark = "0.9"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.7", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
